test upload, inputing and resizing texts on pages

--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
           <div class="col-lg-6 col-sm-12 pt-2 top-text">
             <h4>welcome unboard!</h4>
             <h2>The Smart Brokers Choice Platform</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget
-              sit pretium turpis turpis.
-            </p>
+            <p>The Market at your finger tips</p>
             <button type="button" class="btn btn-danger">Get started</button>
           </div>
 
