--- a/pages/about.html
+++ b/pages/about.html
@@ -112,10 +112,14 @@
         <div class="container-fluid col-lg-6 my-4 section-2-left-wrapper">
           <h3 class="display-1">Who are we</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget sit
-            pretium turpis turpis. Integer etiam sit sed donec. Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit. Ut eget sit pretium
-            turpis turpis. Integer etiam sit sed donec.
+            SMADAC Securities Limited is a trading license holder of the Nigeria
+            Exchange Limited (NGX) with an authorized share capital of
+            N1.5Billion and paid-up share capital of N382.850 Million. The
+            Company was incorporated on September 9th 2002 and licensed on April
+            15th 2004. We are fully licensed to operate as Securities and
+            Exchange Com (SEC) Broker/Dealer and Funds/Portfolio Mgr, NGX
+            Limited Trading License Holder, FMDQ Exchange Limited Associate
+            Member Broker, and NASD Exchange Limited Broker/Dealer.
           </p>
           <div class="container-fluid icon-div">
             <ul>
@@ -149,10 +153,18 @@
         <div class="col-lg-6 col-sm-12 content-box">
           <h3>Why Trade With Us?</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget sit
-            pretium turpis turpis. Integer etiam sit sed donec. Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit. Ut eget sit pretium
-            turpis turpis. Integer etiam sit sed donec.
+            The company bolster the range, depth, expertise and quality of
+            service currently available in the Nigerian capital market by
+            offering its clients professional investment advice based on the
+            experience of its staff in the capital market and rigorous in-house
+            research and analysis, products and services offering tailored to
+            suit the investment requirement of our esteemed clients, actively
+            trading in securities in the secondary market (i.e. equity and debt
+            instruments) and providing easy entry and exit for both local and
+            foreign portfolio investors, timely and efficient services to local
+            fund managers and portfolio investors and upholding the highest
+            standards of service delivery, business ethics, integrity and
+            professionalism.
           </p>
         </div>
       </div>
