--- a/pages/services.html
+++ b/pages/services.html
@@ -105,8 +105,12 @@
           <div class="items col-sm-12 col-lg-3 gx-3 gy-1">
             <h3 class="">Portfolio Management and Advisory</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
-              modi.
+              In line with investment policy statement (IPS), investment
+              decisions are made on behalf of clients based on their stated
+              objectives (Discretionary) as well as execute transactions on
+              behalf of our non-discretionary clients while making available all
+              material information needed to ensure they meet their investment
+              goals.
             </p>
             <a class="arrows" href="">
               <img src="../images/caseicon.png" alt="" />
@@ -115,8 +119,8 @@
           <div class="items col-sm-12 col-lg-3 gx-1 gy-1">
             <h3 class="">Structured Products</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
-              modi.
+              SMADAC Securities Limited “bespoke” investment instruments to
+              enable our clients achieve their defined objectives.
             </p>
             <a class="arrows" href="">
               <img src="../images/circleicon.png" alt="" />
@@ -127,8 +131,8 @@
           <div class="items col-sm-12 col-lg-3 gy-1">
             <h3 class="">Fixed Income Securities</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
-              modi.
+              In line with the investment objective of our clients, we offer
+              specific service in debt instruments/fixed income securities.
             </p>
             <a class="arrows" href="">
               <img src="../images/incomicon.png" alt="" />
@@ -137,8 +141,9 @@
           <div class="items col-sm-12 col-lg-3 gy-1">
             <h3 class="">Unquoted Securities</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
-              modi.
+              Based on our expertise, we identify viable and secured entities
+              and invest into the shares of those companies or assets that are
+              not traded on the open market (unquoted)
             </p>
             <a class="arrows" href="">
               <img src="../images/securityicon.png" alt="" />
@@ -147,8 +152,9 @@
           <div class="items col-sm-12 col-lg-3 gy-1">
             <h3 class="">Wealth Advisory and Financial Planning</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
-              modi.
+              We provide specialized services geared at helping clients achieve
+              their long term objectives and needs while meeting their ongoing
+              obligations.
             </p>
             <a class="arrows" href="">
               <img src="../images/advisoricon.png" alt="" />
@@ -157,8 +163,10 @@
           <div class="items col-sm-12 col-lg-3 gy-1">
             <h3 class="">Stockbroking Services</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
-              modi.
+              This service is targeted at companies seeking to issue equity or
+              debt in the primary issues market as we are well placed to build
+              strong investor support and ensure a successful flotation for
+              clients.
             </p>
             <a class="arrows" href="">
               <img src="../images/stockicon.png" alt="" />
