test upload, datailes added, problem with tablet mode form, needs adjustment

--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
       <div class="container-fluid top-footer">
         <h3 class="display-4 py-1">join our news letter</h3>
         <p class="px-5 py-2">
-          We will send you updates for your better finance management
+          For all new market updates, kindly enter your email in the box below
+          to join our mailing list.
         </p>
         <div class="container footer-input py-2">
           <input
@@ -303,22 +304,29 @@
             </nav>
             <ul class="socials my-3">
               <li>
-                <a href="">
+                <a
+                  target="__blank"
+                  href="https://www.linkedin.com/company/smatradeng/"
+                >
                   <img src="./images/linkedin.png" alt="linkedin" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a target="__blank" href="https://www.twitter.com/smatradeng">
                   <img src="./images/twitter.png" alt="twitter" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a
+                  target="__blank"
+                  target="__blank"
+                  href="https://www.facebook.com/smatradeng"
+                >
                   <img src="./images/facebook.png " alt="facebook" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a target="__blank" href="https://www.instagram.com/smatradeng">
                   <img src="./images/instagram.png" alt="instagram" />
                 </a>
               </li>
