--- a/pages/marketnews.html
+++ b/pages/marketnews.html
@@ -198,24 +198,27 @@
               <li><a href="./services.html">Services</a></li>
               <li><a href="./marketnews.html">Market News</a></li>
             </nav>
-            <ul class="socials">
+            <ul class="socials my-3">
               <li>
-                <a href="">
+                <a
+                  target="__blank"
+                  href="https://www.linkedin.com/company/smatradeng/"
+                >
                   <img src="../images/linkedin.png" alt="linkedin" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a target="__blank" href="https://www.twitter.com/smatradeng">
                   <img src="../images/twitter.png" alt="twitter" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a target="__blank" href="https://www.facebook.com/smatradeng">
                   <img src="../images/facebook.png " alt="facebook" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a target="__blank" href="https://www.instagram.com/smatradeng">
                   <img src="../images/instagram.png" alt="instagram" />
                 </a>
               </li>
