working on the contact us, adding smtp js

--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
             <h4>welcome unboard!</h4>
             <h2>The Smart Brokers Choice Platform</h2>
             <p>The Market at your finger tips</p>
-            <button type="button" class="btn btn-danger">Get started</button>
+            <a href="./pages/signup.html">
+              <button type="button" class="btn btn-danger">
+                Get started
+              </button></a
+            >
           </div>
 
           <div
