--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
         <div class="col-lg-4 col-sm-12 col-md-6 items">
           <h3>Choose A Trade</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, rem.
+            We have designed several products to meet our clients' lifestyle and
+            investment goals.
           </p>
           <div href="" class="arrows">
             <img src="./images/up-arrow.png" alt="" />
@@ -187,7 +188,8 @@
         <div class="col-lg-4 col-sm-12 col-md-6 items">
           <h3>Open An Account</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, rem.
+            There is an account tailored for every client. Open a personal or
+            corporate account in a few easy steps.
           </p>
           <div href="" class="arrows">
             <img src="./images/up-arrow.png" alt="" />
@@ -196,7 +198,8 @@
         <div class="col-lg-4 col-sm-12 col-md-6 items">
           <h3>Fund Your Account</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, rem.
+            There are numerous ways to fund your account. Funding enables you
+            participate in trades.
           </p>
           <div href="" class="arrows">
             <img src="./images/up-arrow.png" alt="" />
@@ -205,16 +208,18 @@
         <div class="col-lg-4 col-sm-12 col-md-6 items">
           <h3>Receive Return</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, rem.
+            You can easily receive your returns on investment with your local
+            account number provided by you.
           </p>
           <div href="" class="arrows">
             <img src="./images/up-arrow.png" alt="" />
           </div>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-6 items">
-          <h3>How to</h3>
+          <h3>Follow The Market</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, rem.
+            Market research is an integral part of our business as it helps our
+            clients make informed investment decisions.
           </p>
           <div href="" class="arrows">
             <img src="./images/up-arrow.png" alt="" />
