--- a/pages/about.html
+++ b/pages/about.html
@@ -91,7 +91,7 @@
           <div class="text-container col-lg-6 col-sm-12">
             <h3 class="text-light">Grand Masters Of Trade</h3>
 
-            <a href="https://www.google.com">
+            <a href="../pages/signup.html">
               <button class="btn btn-danger py-3 px-5">Get started</button>
             </a>
           </div>
