--- a/pages/marketnews.html
+++ b/pages/marketnews.html
@@ -100,7 +100,9 @@
     <section class="market-section-container container-fluid">
       <div class="my-5">
         <h3 class="text-light display-4 my-2">Daily Market Summary</h3>
+        <p>*No new update</p>
         <h3 class="text-light display-4 my-5">Quarterly Market Summary</h3>
+        <p>*No new update</p>
       </div>
 
       <div
@@ -244,6 +246,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="../main.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="../functionality.js"></script>
   </body>
 </html>
