--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section>
 
     <section class="section-3 container-fluid" id="section-3">
-      <div class="row container-fluid mx-auto">
+      <div class="row container-fluid mx-auto service-card-container">
         <div class="block1 col-lg-4 col-md-6 col-sm-12">
           <h4>How To</h4>
           <h3>Get Started!</h3>
@@ -358,7 +358,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./main.js"></script>
-    <script src="./stockData.js"></script>
+    <!-- <script src="./stockData.js"></script> -->
     <script src="./animations.js"></script>
     <script src="./createaccount/bundle.js"></script>
   </body>
