--- a/pages/services.html
+++ b/pages/services.html
@@ -179,9 +179,10 @@
 
     <footer class="container-fluid py-5">
       <div class="container-fluid top-footer">
-        <h3 class="display-4 py-1">join our news letter</h3>
+        <h3 class="display-4 py-1">SUBSCRIBE TO OUR NEWS LETTER</h3>
         <p class="px-5 py-2">
-          We will send you updates for your better finance management
+          For all new market updates, kindly enter your email in the box below
+          to join our mailing list.
         </p>
         <div class="container footer-input py-2">
           <input
